Avancée sur tuto 12 banque hydro

--- a/scripts/12_menv_banque_hydro.Rmd
+++ b/scripts/12_menv_banque_hydro.Rmd
@@ -28,14 +28,58 @@ library(tidyverse)
 
 # Contenu
 
-Blabla
+
+Ces données sont mises à disposition par l'[API Hub'Eau - Hydrométrie](https://hubeau.eaufrance.fr/page/api-hydrometrie).
+
+Le référentiel associé est [disponible en ligne](https://www.sandre.eaufrance.fr/notice-doc/r%C3%A9f%C3%A9rentiel-hydrom%C3%A9trique-3).
+
+# Caractéristiques des stations
+
+Il est possible de collecter depuis l'API certaines données basiques sur les stations HYDRO. Il est possible de les sélectionner sur divers critères qui sont expliqués sur [la page de l'API](https://hubeau.eaufrance.fr/page/api-hydrometrie#/hydrometrie/sites). Par exemple si l'on s'intéresse aux stations de la région Bretagne (code Insee = 53) :
+
+```{r, eval = FALSE}
+donnees_stations <- menv_bh_sta_tod(code_region = 53)
+```
+
+On peut aussi sélectionner selon un rectangle géographique. Dans ce cas le format est imposé :
+
+- Ordre de saisie "min longitude, min latitude, max longitude, max latitude"
+- Coordonnées en WGS84 (EPSG:4326)
+- Séparateur décimal, 
+
+```{r}
+donnees_stations <- menv_bh_sta_tod(bbox = "-7, 46, -3, 48")
+```
+
+On obtient un tableau de `r nrow(donnees_stations)` lignes et `r ncol(donnees_stations)` colonnes nommées :
+
+```{r}
+names(donnees_stations)
+```
+
+Les premières lignes contiennent par exemple les informations suivantes (sélection de colonnes) :
+
+```{r}
+donnees_stations %>% select(code_site, libelle_site, longitude_site, latitude_site, altitude_site,surface_bv, code_departement) %>% head(8) %>% DT::datatable()
+```
 
 # Données temps réel
 
+Ces données sont mises à disposition par le module [Opérations sur les niveaux et les débits des cours d'eau en temps réel](https://hubeau.eaufrance.fr/page/api-hydrometrie#/hydrometrie/observations) de l'API Hub'Eau - Hydrométrie. Elles se rapportent à la station de mesure.
+
 ## Téléchargement
 
+Pour collecter les données associées à une station dont on connaît l'identifiant :
+
 ```{r}
-data_sta <- menv_bh_htr_tod(station_id = "J7010610")
+data_sta <- menv_bh_htr_tod(code_entite = "J7010610")
+```
+
+Par défaut, la fonction renvoir les 7 derniers jours de données, mais on peut en vouloir plus ou sur une période donnée. On peut aussi avoir besoin de la hauteur d'eau (mesure = "H") au lieu du débit (mesure = "Q") :
+
+```{r, eval = FALSE}
+data_sta <- menv_bh_htr_tod(code_entite = "J7010610",
+                            grandeur_hydro = "H")
 ```
 
 ## Structure du tableau
@@ -48,10 +92,17 @@ data_sta %>%
   DT::datatable()
 ```
 
-Représnetation graphique
+Représentation graphique
 
 ```{r}
-ggplot(data = data_sta, aes(x = date_obs, y = resultat_obs)) +
-  geom_point()
+debits <- menv_bh_htr_tod(code_entite = "J7010610",
+                          grandeur_hydro = "Q") %>%
+  mutate(date_obs = lubridate::ymd_hms(date_obs) %>% as.Date()) # format de la date
+
+ggplot(data = debits, aes(x = date_obs, y = resultat_obs)) +
+  geom_point() +
+  scale_x_date(date_labels = "%d/%m") + # mef étiquettes des graduation
+  labs(x = "", y = bquote('Débit ('*m^3/s*')')) # légendes des axes
+  
 ```
 
