--- a/scripts/01_intro.Rmd
+++ b/scripts/01_intro.Rmd
@@ -20,11 +20,11 @@ knitr::opts_chunk$set(
 
 Un *package* R regroupe un ensemble de fonctions. Celui-ci est nommé `{tod}` pour les initiales de "télécharger open data". A terme, il fournira un jeu assez fourni de fonctionalités pour importer des jeux de données ouvertes et leur appliquer des mises en formes minimales.
 
-Pour le moment il permet de :
+Pour le moment, il permet de :
 
 - manipuler les données du [Géoportail de l'Urbanisme](https://rpubs.com/kamoke/723482)
-- télécharger, agréger et simplifier le découpage administratif de la France
-- télécharger, agréger et simplifier le découpage hydrographique de la France, par exemple pour [calculer la richesse en espèces de poissons par bassin versant](https://rpubs.com/kamoke/753331).
+- télécharger, agréger et simplifier les contours ces bassins hydrographiques, par exemple pour [calculer la richesse en espèces de poissons par bassin](https://rpubs.com/kamoke/753331)
+- télécharger, agréger et simplifier le découpage administratif de la France à partir des contours OpenStreetMap déposés sur [data.gouv.fr](www.data.gouv.fr)
 
 Les fonctions sont nommées de manière relativement explicite. Par exemple toutes celles préfixées par `ign_urba`, comme `ign_urba_lire_shapes()` concernent la chaîne de traitements dédiée au portail de l'urbanisme. La première partie du préfixe indique l'organisme fournisseur de la donnée, la seconde le nom de la base.
 
